<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ResourceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.ResourceFragment">

        <TextView
            android:id="@+id/emails"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffdcc9"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/phone_numbers"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffdcc9"
            android:gravity="center"
            android:text="@string/links"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/forms"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffdcc9"
            android:gravity="center"
            android:text="@string/files"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/locations"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffdcc9"
            android:gravity="center"
            android:text="@string/codes"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/training_videos"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>
</ScrollView>